--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         goos: [linux]
-        goarch: [amd64]
+        goarch: ["amd64",arm64,mips]
     steps:
       - uses: actions/checkout@v2
       - uses: wangyoucao577/go-release-action@v1.16
