feat(ci): test and lint as well

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -15,5 +15,9 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: "^1.16"
+      - name: test
+        run: go test -v ./...
       - name: build
         run: go build .
+      - name: lint
+        uses: reviewdog/action-golangci-lint@v1
