--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,8 @@ jobs:
         with:
           fetch-depth: 0
       - uses: actions/setup-go@v2
+        with:
+          go-version: "^1.16"
       - uses: goreleaser/goreleaser-action@v2
         with:
           args: release --rm-dist
