--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,12 +9,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v5
         with:
-          go-version: "^1.16"
+          go-version-file: 'go.mod'
       - name: test
         run: go test -v ./...
       - name: build
